// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsHeader should render responsive 1`] = `
<DocumentFragment>
  <section
    class="flex h-13 w-full items-center justify-between bg-theme-secondary-100 py-1.5 px-8 dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      My Contacts
    </h1>
    <div
      class="items-top flex justify-end"
    >
      <div
        class="flex items-center text-theme-primary-200"
      >
        <div
          class="relative -my-2"
          data-testid="HeaderSearchBar"
        >
          <div
            class="group"
          >
            <button
              class="ring-focus css-1wz6bm9"
              type="button"
            >
              <div
                class="flex h-5 items-center gap-3"
              >
                <span
                  class="hidden md:block"
                >
                  Search
                </span>
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    magnifying-glass.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <span
          class="mx-0.5 flex md:ml-3.5"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
            type="vertical"
          />
        </span>
      </div>
      <button
        class="-mr-2.5 p-2.5"
        type="button"
      >
        <div
          class="text-theme-primary-300 dark:text-theme-secondary-600 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg>
            plus.svg
          </svg>
        </div>
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ContactsHeader should render responsive 2`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder css-835596"
  >
    <div
      class="mx-auto px-8 md:px-10 lg:container"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            My Contacts
          </h1>
          <div
            class="flex items-center text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Manage your frequent Contacts
          </div>
        </div>
        <div>
          <div
            class="items-top flex justify-end"
          >
            <div
              class="flex items-center text-theme-primary-200"
            >
              <div
                class="relative -my-2"
                data-testid="HeaderSearchBar"
              >
                <div
                  class="group"
                >
                  <button
                    class="ring-focus css-1wz6bm9"
                    type="button"
                  >
                    <div
                      class="flex h-5 items-center gap-3"
                    >
                      <span
                        class="hidden md:block"
                      >
                        Search
                      </span>
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          magnifying-glass.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <span
                class="mx-0.5 flex md:ml-3.5"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ggzzh6"
                  type="vertical"
                />
              </span>
            </div>
            <button
              class="ml-6 css-1bx0hyc"
              data-testid="contacts__add-contact-btn"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Add Contact
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactsHeaderExtra should render responsive 1`] = `
<DocumentFragment>
  <div
    class="items-top flex justify-end"
  >
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-1wz6bm9"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-3"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  magnifying-glass.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:ml-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
      </span>
    </div>
    <button
      class="-mr-2.5 p-2.5"
      type="button"
    >
      <div
        class="text-theme-primary-300 dark:text-theme-secondary-600 css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          plus.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ContactsHeaderExtra should render responsive 2`] = `
<DocumentFragment>
  <div
    class="items-top flex justify-end"
  >
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-1wz6bm9"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-3"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  magnifying-glass.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:ml-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ggzzh6"
          type="vertical"
        />
      </span>
    </div>
    <button
      class="ml-6 css-1bx0hyc"
      data-testid="contacts__add-contact-btn"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Add Contact
      </div>
    </button>
  </div>
</DocumentFragment>
`;
